functionality added: prop added to toggle whether icon should animate. Fixed alignment issues with more info & icon

--- a/src/containers/DrawToggle/DrawControl.module.css
+++ b/src/containers/DrawToggle/DrawControl.module.css
@@ -2,7 +2,6 @@
   position: absolute;
   cursor: pointer;
   display: flex;
-  justify-content: space-between;
 }
 
 .BottomRight {
@@ -15,44 +14,41 @@
   right: 5px;
 }
 
+.MoreInfo {
+  width: 70px;
+  position: absolute;
+  right: 25px;
+  bottom: 0px;
+}
+
 .OpenDrawIcon {
-  padding: 0 5px 0 5px;
   border-radius: 50%;
-  transform: scale(1);
-  animation: pulse 5s infinite;
-  width: 20px;
-  height: auto;
+  height: 20px;
+  width: auto;
 }
 
 .CloseDrawIcon {
-  width: 20px;
-  height: auto;
+  height: 20px;
+  width: auto;
 }
-
-@media (hover: hover) {
-  .DrawControlWrapper:hover .OpenDrawIcon {
-    position: relative;
-    width: 25px;
-  }
-  .DrawControlWrapper:hover .CloseDrawIcon {
-    position: relative;
-    width: 20px;
-  }
+.AnimateOpenIcon.OpenDrawIcon {
+  transform: scale(1);
+  animation: pulse 2s infinite;
 }
 
 @keyframes pulse {
   0% {
-    transform: scale(0.99);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    transform: scale(0.8);
+    box-shadow: 0 0 0 0 rgba(71, 71, 71, 0.2);
   }
 
   70% {
     transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+    box-shadow: 0 0 0 10px rgba(71, 71, 71, 0);
   }
 
   100% {
-    transform: scale(0.99);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    transform: scale(0.8);
+    box-shadow: 0 0 0 0 rgba(71, 71, 71, 0);
   }
 }
